objects/Dreamhouse_Settings__c.object
<CustomObject><fields>
        <fullName>Einstein_Vision_Email__c</fullName>
        <label>Einstein Vision Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>LIFX_Token__c</fullName>
        <label>LIFX Token</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>LIFX_URL__c</fullName>
        <label>LIFX URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Light_Service_URL__c</fullName>
        <label>Light Service URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Push_Server_URL__c</fullName>
        <label>Push Server URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Slack_Opportunity_Webhook_URL__c</fullName>
        <label>Slack Opportunity Webhook URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Slack_Property_Webhook_URL__c</fullName>
        <label>Slack Property Webhook URL</label>
        <type>Url</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><enableFeeds>false</enableFeeds><label>Dreamhouse</label><visibility>Protected</visibility></CustomObject>